# rmap

./: .gitignore  Cargo.toml  README.md
data/: config.json
data/layouts/: .gitkeep
data/layouts/samples/: toy_combo.txt  toy_sequential.txt  toy_simul.txt
dvorakj-parser/: Cargo.toml
dvorakj-parser/src/: block.rs  cell.rs  grid.rs  keymap.rs  lib.rs  parse.rs
rmap-config/: Cargo.toml
rmap-config/src/: main.rs
rmap-config/ui/: app-window.slint
rmap-core/: Cargo.toml
rmap-core/src/: config.rs  event.rs  keycode.rs  layout.rs  lib.rs  loader.rs  log.rs  matcher.rs  output.rs  profile.rs
rmap-core/src/hook/: mod.rs  windows.rs
rmap-core/src/ipc/: mod.rs  windows.rs
rmap-core/tests/: parser_matcher.rs
rmap-daemon/: Cargo.toml
rmap-daemon/src/: main.rs
